out of stock alignment issue fixed
# Conflicts:
#	ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/pages/_plp.scss

--- a/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/pages/_plp.scss
+++ b/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/pages/_plp.scss
@@ -80,6 +80,11 @@
 		width:100%;
 	}
 }
+.product-list-wrapper-inner{
+    .loadmore-sec{
+        clear: both;
+    }
+}
 .plp-wrapper {
 	.product-sort-wrapper{
 		.grid-wrapper{
@@ -229,6 +234,10 @@
 						transition: transform 500ms ease;
 						transition: transform 500ms ease, -webkit-transform 500ms ease;
 						transform-origin: top;
+                        
+                        &.error{                        
+                            margin-top: 0px;                       
+                        }
 					}
 					.plp-hover-img,
 					.plp-model-img{
@@ -250,19 +259,29 @@
 						text-decoration: line-through;
 						margin-right:10px;
                         color: $mlight-gray;
+                        @include media-breakpoint-down(sm) {
+                            margin-right:2px;
+                            font-size: 13px;
+                        }
 					}
 					span.savings{
 						color:#da3549;
+                        @include media-breakpoint-down(sm) {                            
+                            font-size: 13px;                            
+                        }
 					}
                     span.sale-price{
                         padding-left: 20px;
 					}
 					@include media-breakpoint-down(sm) {
 					span.sale-price{
-                        padding-left: 10px;
+                        padding-left: 2px;
+                        font-size: 13px;
 					}
 					}
 				}
+                
+                
 			}
 			.hover{
 				.product-image{
@@ -272,6 +291,24 @@
 					}
 				}
 			}
+            
+            a.stockLevelStatus {
+                top: 30%;
+                left: 0;
+                right: 0;
+                margin: auto;
+                font-size: 12px;
+                font-weight: 600;
+                position: absolute;
+                padding: 1px 1px 3px 17px;
+                border: 1px solid #e4e4e4;
+                background-color: #fff;
+                color: #ff1c47;
+                display: block;
+                max-width: 105px;
+                width: 100%;
+                text-decoration: none;
+            }
 		}
 		.twocolumngrid{
 			.product-grid{
@@ -356,6 +393,7 @@
 								list-style: none;
 								padding-left: 0px;
 								padding: 18px 0px;
+                                overflow: hidden;
 								li{
 									margin-bottom:15px;
 									.le-radio label {
@@ -549,7 +587,7 @@
 		bottom: 0;
 		left:0px;
 		margin:0px;
-		z-index: 999;
+		z-index: 998;
 		background: #fff;
 		padding: 10px;
 		border-top: 1px solid #ddd;
@@ -877,7 +915,7 @@
 
 @include media-breakpoint-up(sm) {
 	.plp-wrapper .right-side-content .product-list-wrapper .product-grid .price-sec span.sale-price {
-		padding-left: 10px; 
+		padding-left: 10px;         
 	}
 }
 
